--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,10 @@
 		<artifactId>joda-time</artifactId>
 		<version>2.0</version>
 	</dependency>
+	<dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>2.3</version>
+	</dependency>
   </dependencies>
 </project>
